CU-7pw27a: Fix coworkers overflow with flexbox

--- a/src/styles/templates/blocks/_block-coworkers.scss
+++ b/src/styles/templates/blocks/_block-coworkers.scss
@@ -7,6 +7,10 @@
   }
   .deputy__coworkers {
     text-align: center;
+    display: flex;
+    flex-flow: column wrap;
+    max-height: 100%;
+    justify-content: center;
     .coworker__name {
       margin: 0;
       text-transform: capitalize;
